web/book/tests/documentation/snapshots/documentation__book__transforms__window__windowing-by-default__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\ngroup department (\n  sort age\n  derive {rnk = rank age}\n)\n"
---
SELECT
  *,
  RANK() OVER (
    PARTITION BY department
    ORDER BY
      age ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING
  ) AS rnk
FROM
  employees

